--- a/SnakeGame/css/style.css
+++ b/SnakeGame/css/style.css
@@ -13,14 +13,17 @@
 body {
     background-color: #191919;
     display: flex;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     color: white;
+    overflow: hidden;
 }
 
 canvas {
+    margin: 5rem auto;
     background-color: #111;
     border: 1px solid #000;
 }
@@ -91,28 +94,49 @@ canvas {
     text-decoration: none;
 }
 .controls {
-    display: none;
+
     position: absolute;
-    bottom: 20px;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
   }
 
-  .controls button {
-    background-color: #555;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    margin: 5px;
-    font-size: 20px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+
 
   .arrow-buttons {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .arrow-center{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+   
+  }
+
+  .arrow-buttons .left,.arrow-buttons .right{
+    width: 50%;
+    height: 100%;
+  }
+
+  .arrow-center .down, .arrow-center .up{
+    width:100%;
+    height: 50%;
+    position: relative;
+   
+  
   }
