--- a/SnakeGame/css/style.css
+++ b/SnakeGame/css/style.css
@@ -23,9 +23,9 @@ body {
 }
 
 canvas {
-    margin: 5rem auto;
+  
+    margin: 5dvh auto;
     background-color: #111;
-    border: 1px solid #000;
 }
 
 .score {
