--- a/VelhaDetails/style.css
+++ b/VelhaDetails/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,35 +6,28 @@
 }
 
 body {
-    background-color: rgb(29, 22, 45);;
+    background-color: rgb(111, 5, 181);
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh; 
-    padding-top: 80px; 
+    min-height: 100vh;
+    padding-top: 80px;
 }
-
-
-
-
 
 header h1 {
     font-size: 32px;
     margin: 0;
-    
 }
-
 
 .container {
     max-width: 1000px;
     padding: 20px;
-    background-color: #0794c7b9;
+    background-color: rgb(112, 4, 158);
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 40px;
 }
-
 
 section {
     margin-bottom: 20px;
@@ -45,23 +37,25 @@ section h2 {
     font-size: 24px;
     margin-bottom: 10px;
     margin-top: 35px;
-    
-    
+    border-bottom: 2px solid white; /* Adicionado destaque */
+    padding-bottom: 5px; /* Adicionado espaço */
 }
 
-
-.section-image {
-    width: 80%; 
-    height: auto; 
-    border-radius: 8px; 
-    margin-bottom: 10px; 
-    margin-top: 20px;
-    
+.code-block {
+    background-color: #222; /* Fundo escuro para o bloco de código */
+    color: #eef; /* Cor do texto no bloco de código */
+    padding: 10px;
+    border-radius: 5px;
+    overflow-x: auto; /* Adicionado rolagem horizontal */
+    font-family: monospace; /* Fonte monoespaçada */
 }
 
+.code-block code {
+    color: #00ff00; /* Verde para destacar o código */
+}
 
 code {
-    background-color: #eef;
+    background-color: #333;
     color: #333;
     padding: 2px 4px;
     border-radius: 4px;
@@ -82,25 +76,8 @@ code {
 }
 
 .home-button:hover {
-    background-color: #0794c7b9;;
-    
+    background-color: rgb(206, 111, 247);
 }
 
-.play-button{
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: white;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    transition: background-color 0.5s ease;
-}
 
-.play-button:hover {
-    background-color: #0794c7b9;;
-    
-}
+
