--- a/VelhaDetails/style.css
+++ b/VelhaDetails/style.css
@@ -126,7 +126,7 @@ code {
         font-size: 14px;
     }
 
-    .home-button {
+    .home-button, .play-button {
         padding: 8px 16px;
         font-size: 14px;
         top: 10px;
@@ -152,7 +152,7 @@ code {
         font-size: 12px;
     }
 
-    .home-button {
+    .home-button, .play-button  {
         padding: 6px 12px;
         font-size: 12px;
     }
