--- a/VelhaGame/style.css
+++ b/VelhaGame/style.css
@@ -10,6 +10,32 @@ body {
   background: linear-gradient(90deg, #8a56c6 0%, #5645cc 100%);
 }
 
+.alert {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.modal h1 {
+  width: 100%;
+}
+
 .board {
   display: grid;
   width: 100%;
