--- a/VelhaGame/style.css
+++ b/VelhaGame/style.css
@@ -182,6 +182,7 @@ a {
   transform: translatex(-50%);
   top: 50px;
   left: 50%;
+ 
 }
 #bot,
 #multplayer {
@@ -210,11 +211,13 @@ a {
 }
 
 #difficulty-selection{
-  position: absolute;
-  right:0px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ gap: 5px;
 }
 #difficulty-selection button{
-  width: 50px;
+  width: 60px;
   height: 20px;
   font-size: 12px;
   border-radius: 20px;
