--- a/VelhaGame/style.css
+++ b/VelhaGame/style.css
@@ -177,12 +177,20 @@ a {
 }
 
 .buttons {
-  width: 300px;
+  width: 350px;
   position: absolute;
   transform: translatex(-50%);
   top: 50px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius:20px ;
+  height: 80px;
   left: 50%;
- 
+}
+
+.buttons-controler{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #bot,
 #multplayer {
@@ -212,15 +220,16 @@ a {
 
 #difficulty-selection{
  display: flex;
- justify-content: center;
+ justify-content: space-evenly;
  align-items: center;
  gap: 5px;
+ width: 100%;
 }
 #difficulty-selection button{
-  width: 60px;
+  width: 70px;
   height: 20px;
+  border-radius: 5px;
   font-size: 12px;
-  border-radius: 20px;
   color: white;
   background-color: rgb(110, 27, 198);
   border: none;
