--- a/VelhaGame/style.css
+++ b/VelhaGame/style.css
@@ -183,7 +183,7 @@ a {
   top: 50px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius:20px ;
-  height: 80px;
+  height: 100px;
   left: 50%;
 }
 
@@ -236,6 +236,12 @@ a {
   cursor: pointer;
 }
 
+#difficulty{
+  text-align: center;
+  text-transform:capitalize;
+  color: #fff;
+  margin-top:5px;
+}
 
 @media (max-width: 1300px) {
   .cell {
